fix possible overflow in settings modal

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,8 @@ body {
   margin: 10px;
   padding: 15px;
   border-radius: 7px;
+
+  overflow-x: auto;
 }
 
 .elevation-1 { box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px; }
